--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -12,3 +12,15 @@ body {
   margin: 0;
   padding: 0;
 }
+
+#app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
